@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.576 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.577 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -186,4 +186,5 @@ Changes from NetBSD 3.0 to NetBSD 4.0:
 	openssh: Upgrade to 4.3. [christos 20060204]
 	openpam(3): update to 20050616 (figwort) [christos 20050204]
 	am-utils: Upgrade to 6.1.3 [christos 20060205]
-
+	wsmouse(4): Add support to automatically repeat wsmouse button events.
+		[jmmv 20060205]
